--- a/main-input.yaml
+++ b/main-input.yaml
@@ -1,25 +1,7 @@
-fq:
+rna_reads_human:
   class: File
   location: rnaseq/raw_fastq/Mov10_oe_1.subset.fq
   format: http://edamontology.org/format_1930
-  # - class: File
-  #   location: rnaseq/raw_fastq/Mov10_oe_2.subset.fq
-  #   format: http://edamontology.org/format_1930
-  # - class: File
-  #   location: rnaseq/raw_fastq/Mov10_oe_3.subset.fq
-  #   format: http://edamontology.org/format_1930
-  # - class: File
-  #   location: rnaseq/raw_fastq/Irrel_kd_1.subset.fq
-  #   format: http://edamontology.org/format_1930
-  # - class: File
-  #   location: rnaseq/raw_fastq/Irrel_kd_2.subset.fq
-  #   format: http://edamontology.org/format_1930
-  # - class: File
-  #   location: rnaseq/raw_fastq/Irrel_kd_3.subset.fq
-  #   format: http://edamontology.org/format_1930
-genome:
+ref_genome:
   class: Directory
-  location: hg-19-chr1-STAR-index
-gtf:
-  class: File
-  location: rnaseq/reference_data/chr1-hg19_genes.gtf
+  location: hg19-chr1-STAR-index
